# S4-2.0

./: README.rst  nixpkgs-overlays.nix
.circleci/: config.yml
docs/: Makefile
docs/source/: conf.py  index.rst  invoice.rst  subscription-configuration.rst
hspec-jenkins-lae/: fix-metadata.patch  hspec-jenkins-lae.nix
onion-service-endpoint/: LICENSE  setup.py
onion-service-endpoint/src/twisted/plugins/: onion_service_endpoint_dropin.py
ops/: dev.nix  nginx.nix  nixpkgs-overlays.nix  s4-ec2.nix  s4-vbox.nix  s4.nix  s4signupwebsite.nix  security-groups.tf  services.nix  tor.nix  txxonion.nix
ops/hspec-jenkins-lae/: default.nix  hspec-jenkins-lae.nix
ops/tor/: default.nix
ops/zcash/: blake2-rfc.nix  default.nix  librustzcash.nix
s4/: README.md  default.nix  s4.cabal  s4.nix  stack.yaml
s4/app/: Main.hs
s4/echo/: Main.hs
s4/src/: Invoice.hs  Lib.hs  Model.hs  Tahoe.hs  Wormhole.hs
s4/src/S4/: Plan.hs  Server.hs
s4/src/S4/Internal/: API.hs  Deployment.hs  Invoice.hs  JSON.hs  Model.hs  Subscription.hs  Wormhole.hs
s4/test/: Main.hs  Spec.hs
signup-website/: index.html
